<resources>
    <string name="app_name">무럭무럭</string>
    <string name="facebook_app_id">913320682152625</string>
    <string name="fb_login_protocol_scheme">fb913320682152625</string>

    <string name="joinFailed">이메일 또는 비밀번호가 올바르지 않습니다. 다시 시도해 주세요.</string>
    <string name="loginFailed">이메일 또는 비밀번호를 다시 확인해 주세요.</string>
    <string name="inputList">내용을 입력해 주세요.</string>
    <string name="pName">이름 : 사용자가 지은 이름</string>
    <string name="pRealName">(실제 이름)</string>
    <string name="_2000_00_00">defaultDate</string>
    <string name="calendar">달력</string>
    <string name="minus">ㅡ</string>
    <string name="cntWater">물 준 횟수 :</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="alarmOff">알람 OFF</string>
    <string name="tipPlant">키우기 팁</string>
    <string name="delete">삭제</string>
    <string name="alarmOn">알람 ON</string>
    <string name="notFound_info">정보가 존재하지 않습니다.</string>
    <string name="temperature1">10~15℃</string>
    <string name="temperature2">16~20℃</string>
    <string name="temperature3">21~25℃</string>
    <string name="temperature4">26~30℃</string>
    <string name="hydro1">40% 미만</string>
    <string name="hydro2">40 ~ 70%</string>
    <string name="hydro3">70% 이상</string>
    <string name="water1">항상 흙을 축축하게 유지함(물에 잠김)</string>
    <string name="water2">흙을 촉촉하게 유지함(물에 잠기지 않도록 주의)</string>
    <string name="water3">토양 표면이 말랐을때 충분히 물을 줌</string>
    <string name="water4">화분 흙 대부분 말랐을때 충분히 물을 줌</string>
    <string name="email">이메일 :</string>
    <string name="password">비밀번호 :</string>
    <string name="login">로그인</string>
    <string name="rememberId">아이디 기억하기</string>
    <string name="login_google" />
    <string name="join">회원가입</string>
    <string name="findPW">비밀번호 찾기</string>
    <string name="duplicate">중복확인</string>
    <string name="checkPW">비밀번호 확인:</string>
    <string name="repPW">비밀번호를 다시 입력해주세요</string>
    <string name="nickname">닉네임 :</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="infoFrt">비료 정보 :</string>
    <string name="infoTemp">생육 온도 :</string>
    <string name="infoHydro">습도 :</string>
    <string name="infoPrpg">번식 시기 :</string>
    <string name="infoSoil">토양 정보 :</string>
    <string name="infoWater">물 주기 :</string>
    <string name="spring">봄 -</string>
    <string name="summer">여름 -</string>
    <string name="autumn">가을 -</string>
    <string name="winter">겨울 -</string>
    <string name="close">닫기</string>
    <string name="enroll">등록</string>
    <string name="perDate">일 마다</string>
    <string name="timeWater">위 시간에 물을 줍니다.</string>
    <string name="plantName">식물 이름 :</string>
    <string name="plantFriendly">애칭 :</string>
    <string name="enrollDate">등록 날짜 : </string>
    <string name="modify">수정</string>
    <string name="picture">사진 :</string>
    <string name="load">불러오기</string>
    <string name="_2017_01_01">2017.01.01</string>
    <string name="back">뒤로</string>
    <string name="searchPlant">식물 정보를 검색합니다.</string>
    <string name="search">검색</string>
    <string name="initContents">내용을 표시합니다.</string>
    <string name="share">공유</string>
    <string name="reset">리셋</string>
    <string name="add">추가</string>
    <string name="googleLogin">구글 계정으로 가입하기</string>
    <string name="setCategory">공유할 카테고리를 설정해 주세요</string>
    <string name="flower">꽃</string>
    <string name="herb">허브</string>
    <string name="cactus">다육이</string>
    <string name="vegetable">채소</string>
    <string name="tree">나무</string>
    <string name="like">좋아요</string>
    <string name="comment">댓글 달기</string>
    <string name="linkShare">링크 공유하기</string>
    <string name="add_plant">식물을 등록합니다</string>
    <string name="name">이름 :</string>
    <string name="enroll_date">등록일 :</string>
    <string name="water_date">00:00 AM 에 물을 줍니다</string>
    <string name="filtering">필터링</string>
    <string name="tip_pname">식물 이름</string>
    <string name="input_tip">식물 이름을 입력하세요 :</string>
    <string name="search_tip">검색</string>
    <string name="send">보내기</string>
    <string name="authMsg1">무럭무럭을 정상적으로 이용하기 위해 접근 권한이 필요합니다</string>
    <string name="authMsg2"><![CDATA[[설정] > [권한] 에서 권한을 허용해 주세요]]></string>
    <string name="authOK">실행에 필요한 권한이 허용되었습니다</string>
</resources>
