<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="308dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvExplainAdd"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/add_plant"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorGray"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/dialog_tvRealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plantName"
        android:layout_below="@+id/tvExplainAdd"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/dialog_etRealname"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/dialog_tvRealName"
        android:layout_alignBaseline="@id/dialog_tvRealName"
        android:maxLines="1"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/dialog_tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_tvRealName"
        android:layout_alignEnd="@+id/dialog_tvRealName"
        android:layout_marginTop="16dp"
        android:text="@string/plantFriendly"
        />
    <EditText
        android:id="@+id/dialog_etName"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_tvName"
        android:layout_alignBottom="@+id/dialog_tvName"
        android:layout_toEndOf="@+id/dialog_tvName"
        android:maxLines="1"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/dialog_tvEnrollDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enrollDate"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/dialog_etName"
        android:layout_alignEnd="@+id/dialog_tvRealName" />

    <TextView
        android:id="@+id/dialog_tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_tvEnrollDate"
        android:layout_toEndOf="@+id/dialog_tvEnrollDate"
        android:text="@string/_2017_01_01"
        android:layout_marginStart="8dp"
        />
   <Button
       android:id="@+id/dialog_btnCalendar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_toEndOf="@+id/dialog_tvDate"
       android:layout_alignBaseline="@+id/dialog_tvDate"
       android:layout_marginStart="16dp"
       android:text="@string/modify"
       android:backgroundTint="@color/colorPriMedium"
       />

    <TextView
        android:id="@+id/dialog_tvPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture"
        android:layout_alignEnd="@+id/dialog_tvRealName"
        android:layout_below="@+id/dialog_tvDate"
        android:layout_marginTop="18dp"
        />
    <ImageView
        android:id="@+id/dialog_ivPicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toEndOf="@+id/dialog_tvPicture"
        android:layout_below="@+id/dialog_tvDate"
        android:src="@drawable/ic_img_placeholder"
        android:layout_marginStart="8dp"
        />

    <Button
        android:id="@+id/dialog_btnPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/dialog_ivPicture"
        android:layout_alignStart="@+id/dialog_btnCalendar"
        android:layout_alignBottom="@+id/dialog_ivPicture"
        android:text="@string/load"
        android:backgroundTint="@color/colorPriMedium"
        />

    <Button
        android:id="@+id/dialog_btnNegative"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_ivPicture"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:backgroundTint="@color/colorPrimary"
        />

    <Button
        android:id="@+id/dialog_btnPositive"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_btnNegative"
        android:layout_toEndOf="@+id/dialog_btnNegative"
        android:text="@string/ok"
        android:backgroundTint="@color/colorPrimary"
        />

</RelativeLayout>
