<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:id="@+id/inputCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="5dp"
        >

        <RelativeLayout
            android:id="@+id/layout_listInput"
            android:layout_width="wrap_content"
            android:layout_height="196dp"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/iv_listInput"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_img_placeholder" />

            <EditText
                android:id="@+id/et_listInput"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_toEndOf="@+id/iv_listInput"
                android:background="@android:color/transparent"
                android:hint="@string/inputList"
                android:maxLength="300" />

            <Button
                android:id="@+id/btnReset_listInput"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_listInput"
                android:text="@string/reset" />

            <Button
                android:id="@+id/btnAdd_listInput"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnReset_listInput"
                android:layout_toEndOf="@+id/btnReset_listInput"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnFilter_listInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnReset_listInput"
                android:text="필터링"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
